# AI-Portfolio

./: README.md  package.json
infracloud-inspection-mvp/apps/workflow/: pyproject.toml  requirements.txt
infracloud-inspection-mvp/apps/workflow/app/: ai.py  catalog.py  config.py  graph.py  logger.py  main.py  metrics.py  models.py  nodes.py  observability.py  redaction.py  state.py
infracloud-inspection-mvp/apps/workflow/fixtures/: test1_request.json  test2_request.json  test3_request.json
infracloud-inspection-mvp/apps/workflow/scripts/: generate_test_audio.py
infracloud-inspection-mvp/apps/workflow/tests/: conftest.py  evaluate_dataset.py  evaluate_stages.py  generate_dataset_audio.py  generate_noise_samples.py  test_nodes.py  test_regressions.py
news-summarizer/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
news-summarizer/.github/workflows/: ci.yml
news-summarizer/docs/: api_keys_setup.md  architecture.md  mvp_scope.md  product_overview.md
news-summarizer/docs/report/: report.md
news-summarizer/examples/: sample_output.json
news-summarizer/src/news_summariser/: __init__.py  __main__.py  cli.py  config.py  gradio_app.py  logging_config.py
news-summarizer/src/news_summariser/pipeline/: errors.py  models.py  run.py
news-summarizer/src/news_summariser/processing/: __init__.py  dedupe.py  normalize.py  sentiment.py  summariser.py
news-summarizer/src/news_summariser/providers/: __init__.py  cohere_client.py  gdelt_client.py  newsapi_client.py  openai_client.py
news-summarizer/src/news_summariser/reporting/: console_report.py  json_report.py  metrics.py
news-summarizer/src/news_summariser/utils/: retry.py  (+2 more)
news-summarizer/src/news_summarizer/: __init__.py  config.py  main.py
news-summarizer/tests/: test_pipeline_smoke.py  test_reporting.py  test_retry.py
stock-market-analysis-RAG/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
stock-market-analysis-RAG/.github/workflows/: ci.yml
stock-market-analysis-RAG/docs/: api_keys_setup.md  architecture.md  mvp_scope.md  product_overview.md
stock-market-analysis-RAG/examples/: sample_output.json
stock-market-analysis-RAG/src/lab2_rag_openai/: __init__.py  chunking.py  config.py  io_utils.py  main.py  openai_client.py  pipeline.py  vector_store.py
stock-market-analysis-RAG/src/stock_market_rag/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
stock-market-analysis-RAG/tests/: test_chunking.py  test_pipeline_smoke.py  test_reporting.py  test_retrieval.py  test_retry.py
(+307 files in other folders)
