[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab2-rag-openai"
version = "0.1.0"
description = "Week 2 Day 5 Lab 2: Native OpenAI RAG pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
